home page header introduction

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>M Haidar Hanif - Software Engineer & Web Developer</title>
   </head>
   <body>
-    <!-- Content -->
+    <header>
+      <h1>Hey, I'm Haidar!</h1>
+      <p>I'm helping people like you to be better</p>
+    </header>
   </body>
 </html>
