home page nav and main sections

--- a/index.html
+++ b/index.html
@@ -6,9 +6,34 @@
     <title>M Haidar Hanif - Software Engineer & Web Developer</title>
   </head>
   <body>
+    <nav>
+      <!-- logo -->
+
+      <ul>
+        <li>Contact</li>
+        <li>About</li>
+        <li>CV</li>
+      </ul>
+    </nav>
+
     <header>
       <h1>Hey, I'm Haidar!</h1>
       <p>I'm helping people like you to be better</p>
     </header>
+
+    <main>
+      <section>
+        <h2>Work / Projects</h2>
+        <p>Thing I have made in the past</p>
+      </section>
+
+      <section>
+        <!-- Projects -->
+      </section>
+    </main>
+
+    <footer>
+      <p>&copy; 2026 M Haidar Hanif &middot; Source</p>
+    </footer>
   </body>
 </html>
