--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
     <header>
       <h1>Hey, I'm Haidar!</h1>
       <p>I'm helping people like you to be better</p>
+
+      <section>
+        <ul>
+          <li>
+            <a href="https://x.com/mhaidarhanif">Twitter/X</a>
+          </li>
+          <li>
+            <a href="https://github.com/mhaidarhanif">GitHub</a>
+          </li>
+          <li>
+            <a href="https://youtube.com/mhaidarhanif">YouTube</a>
+          </li>
+        </ul>
+      </section>
     </header>
 
     <main>
