navigation link to all pages: home, contact, about

--- a/contact/index.html
+++ b/contact/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About M Haidar Hanif - Software Engineer & Web Developer</title>
+    <title>Contact M Haidar Hanif - Software Engineer & Web Developer</title>
   </head>
   <body>
     <nav>
@@ -26,11 +26,11 @@
     </nav>
 
     <header>
-      <h1>Longer story about Haidar</h1>
+      <h1>Contact me through this form</h1>
     </header>
 
     <main>
-      <!-- Longer story -->
+      <!-- Contact form -->
     </main>
 
     <footer>
