--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
   </head>
   <body>
     <nav>
-      <!-- logo -->
+      <a href="/">Logo</a>
 
       <ul>
-        <li>Contact</li>
-        <li>About</li>
-        <li>CV</li>
+        <li>
+          <a href="/">Home</a>
+        </li>
+        <li>
+          <a href="/contact">Contact</a>
+        </li>
+        <li>
+          <a href="/about">About</a>
+        </li>
+        <li>
+          <a href="https://drive.google.com">CV</a>
+        </li>
       </ul>
     </nav>
 
