target blank to all social media links

--- a/index.html
+++ b/index.html
@@ -32,13 +32,31 @@
       <section>
         <ul>
           <li>
-            <a href="https://x.com/mhaidarhanif">Twitter/X</a>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://x.com/mhaidarhanif"
+            >
+              Twitter/X
+            </a>
           </li>
           <li>
-            <a href="https://github.com/mhaidarhanif">GitHub</a>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://github.com/mhaidarhanif"
+            >
+              GitHub
+            </a>
           </li>
           <li>
-            <a href="https://youtube.com/mhaidarhanif">YouTube</a>
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://youtube.com/mhaidarhanif"
+            >
+              YouTube
+            </a>
           </li>
         </ul>
       </section>
