--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <nav>
-      <a href="/">Logo</a>
+      <a href="/">
+        <img
+          src="/images/mhaidarhanif-logo.svg"
+          alt="Logo"
+          width="50"
+          height="50"
+        />
+      </a>
 
       <ul>
         <li>
@@ -26,6 +33,12 @@
     </nav>
 
     <header>
+      <img
+        src="/images/mhaidarhanif.jpg"
+        alt="M Haidar Hanif"
+        width="150"
+        height="150"
+      />
       <h1>Hey, I'm Haidar!</h1>
       <p>I'm helping people like you to be better</p>
 
