--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <nav>
-      <a href="/">Logo</a>
+      <a href="/">
+        <img
+          src="/images/mhaidarhanif-logo.svg"
+          alt="Logo"
+          width="50"
+          height="50"
+        />
+      </a>
 
       <ul>
         <li>
