home page section achievements show button

--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
       <section>
         <!-- Projects -->
       </section>
+
+      <section>
+        <h2>Achievements</h2>
+        <p>Things I Have Achieved</p>
+      </section>
+
+      <section>
+        <!-- List of achievements -->
+
+        <button>Show more &darr;</button>
+      </section>
     </main>
 
     <footer>
