--- a/contact/index.html
+++ b/contact/index.html
@@ -38,6 +38,31 @@
 
     <main>
       <!-- Contact form -->
+      <form>
+        <div>
+          <label for="full-name">Full name</label>
+          <input type="text" name="full-name" id="full-name" required />
+        </div>
+
+        <div>
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" required />
+        </div>
+
+        <div>
+          <label for="phone">Phone</label>
+          <input type="tel" name="phone" id="phone" />
+        </div>
+
+        <div>
+          <label for="message">Message</label>
+          <textarea name="message" id="message" required></textarea>
+        </div>
+
+        <div>
+          <button>Send Message</button>
+        </div>
+      </form>
     </main>
 
     <footer>
