--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@
         </div>
 
         <div>
-          <button>Send Message</button>
+          <button type="submit">Send Message</button>
         </div>
       </form>
     </main>
