hero related classes, and start styling them

--- a/index.html
+++ b/index.html
@@ -34,18 +34,19 @@
       </ul>
     </nav>
 
-    <header>
+    <header class="hero">
       <img
+        class="hero-photo"
         src="/images/mhaidarhanif.jpg"
-        alt="M Haidar Hanif"
+        alt="Photo of M Haidar Hanif"
         width="150"
         height="150"
       />
-      <h1>Hey, I'm Haidar!</h1>
-      <p>I'm helping people like you to be better</p>
+      <h1 class="hero-greeting">Hey, I'm Haidar!</h1>
+      <p class="hero-intro">I'm helping people like you to be better</p>
 
-      <section>
-        <ul>
+      <section class="hero-social-media">
+        <ul class="hero-socials">
           <li>
             <a
               target="_blank"
