button primary styling

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact M Haidar Hanif - Software Engineer & Web Developer</title>
+
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav>
@@ -60,7 +62,7 @@
         </div>
 
         <div>
-          <button type="submit">Send Message</button>
+          <button class="button-primary" type="submit">Send Message</button>
         </div>
       </form>
     </main>
