--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <section>
         <!-- List of achievements -->
 
-        <button>Show more &darr;</button>
+        <button class="button-primary">Show more &darr;</button>
       </section>
     </main>
 
