button styles for social media links

--- a/contact/index.html
+++ b/contact/index.html
@@ -62,7 +62,9 @@
         </div>
 
         <div>
-          <button class="button-primary" type="submit">Send Message</button>
+          <button class="button button-primary" type="submit">
+            Send Message
+          </button>
         </div>
       </form>
     </main>
