--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <ul class="hero-socials">
           <li>
             <a
+              class="button button-twitter"
               target="_blank"
               rel="noopener noreferrer"
               href="https://x.com/mhaidarhanif"
@@ -58,6 +59,7 @@
           </li>
           <li>
             <a
+              class="button button-github"
               target="_blank"
               rel="noopener noreferrer"
               href="https://github.com/mhaidarhanif"
@@ -67,6 +69,7 @@
           </li>
           <li>
             <a
+              class="button button-youtube"
               target="_blank"
               rel="noopener noreferrer"
               href="https://youtube.com/mhaidarhanif"
@@ -96,7 +99,7 @@
       <section>
         <!-- List of achievements -->
 
-        <button class="button-primary">Show more &darr;</button>
+        <button class="button button-primary">Show more &darr;</button>
       </section>
     </main>
 
