setup icon font with remixicon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.8.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
 
     <link rel="stylesheet" href="/style.css" />
   </head>
@@ -61,7 +65,8 @@
               rel="noopener noreferrer"
               href="https://x.com/mhaidarhanif"
             >
-              Twitter/X
+              <i class="ri-twitter-fill"></i>
+              <span>Twitter/X</span>
             </a>
           </li>
           <li>
@@ -106,7 +111,10 @@
       <section>
         <!-- List of achievements -->
 
-        <button class="button button-primary">Show more &darr;</button>
+        <button class="button button-primary">
+          <span>Show more</span>
+          <i class="ri-arrow-down-long-line"></i>
+        </button>
       </section>
     </main>
 
